- bugfix fontfile for mobile chrome - feature admin version - feature com partner version

--- a/med/src/style.scss
+++ b/med/src/style.scss
@@ -6,7 +6,7 @@ $red:#ff4136;
 
 @font-face{
     font-family: 'FontAwesome';
-    src: url('assets/fonts/fontawesome-webfont.woff2') format('woff2');
+    src: url('assets/fonts/fontawesome-webfont.woff');
     font-weight: normal;
     font-style: normal;
 }
